--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -298,7 +298,7 @@ body {
         }
     }
 
-    @media only screen and (max-width: 2214px) and (min-width: 1401px) {
+    @media only screen and (min-width: 1401px) {
         .main-container {
             grid-template-columns: 300px auto 300px;
 
